WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234806
[JSC] Fix length of Intl.NumberFormat.formatRange and Intl.PluralRules.selectRange
https://bugs.webkit.org/show_bug.cgi?id=234806
Summary
[JSC] Fix length of Intl.NumberFormat.formatRange and Intl.PluralRules.select...
Yusuke Suzuki
Reported
2022-01-03 00:04:04 PST
[JSC] Fix length of Intl.NumberFormat.formatRange and Intl.PluralRules.selectRange
Attachments
Patch
(4.89 KB, patch)
2022-01-03 00:04 PST
,
Yusuke Suzuki
ashvayka
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2022-01-03 00:04:56 PST
Created
attachment 448212
[details]
Patch
Alexey Shvayka
Comment 2
2022-01-03 07:39:18 PST
Comment on
attachment 448212
[details]
Patch Nice one!
Yusuke Suzuki
Comment 3
2022-01-03 08:31:34 PST
Committed
r287543
(
245678@trunk
): <
https://commits.webkit.org/245678@trunk
>
Radar WebKit Bug Importer
Comment 4
2022-01-03 08:32:17 PST
<
rdar://problem/87067774
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug