[JSC] Fix length of Intl.NumberFormat.formatRange and Intl.PluralRules.selectRange https://bugs.webkit.org/show_bug.cgi?id=234806

Reviewed by Alexey Shvayka.

JSTests:

* stress/intl-numberformat-format-range-v3.js:
(nf.formatRange.nf.formatRangeToParts.methods.forEach):
* stress/intl-pluralrules-selectrange.js:

Source/JavaScriptCore:

These length's numbers are wrong. This patch fixes them.

* runtime/IntlNumberFormatPrototype.cpp:
(JSC::IntlNumberFormatPrototype::finishCreation):
* runtime/IntlPluralRulesPrototype.cpp:
(JSC::IntlPluralRulesPrototype::finishCreation):


Canonical link: https://commits.webkit.org/245678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287543 268f45cc-cd09-0410-ab3c-d52691b4dbfc